<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Calendar</string>
    <string name="what_label">What</string>
    <string name="where_label">Where</string>
    <string name="when_label">Scheduled</string>
    <string name="timezone_label">Time zone</string>
    <string name="attendees_label">Guests</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today_at_time_fmt">"Today at <xliff:g id="time_interval">%s</xliff:g>"</string>
    <string name="tomorrow_at_time_fmt">"Tomorrow at <xliff:g id="time_interval">%s</xliff:g>"</string>
    <string name="date_time_fmt">"<xliff:g id="date">%s</xliff:g>, <xliff:g id="time_interval">%s</xliff:g>"</string>
    <plurals name="Nminutes">

        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="Nhours">

        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="Ndays">

        
        <item quantity="one">1 day</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <plurals name="weekN">

        
        <item quantity="other">Week <xliff:g id="count">%d</xliff:g></item>
    </plurals>
    <string name="calendar_refresh"> "Refresh"</string>
    <string name="show_day_view" translatable="false">"Show day"</string>
    <string name="agenda_view" translatable="false">"Agenda"</string>
    <string name="day_view" translatable="false">"Day"</string>
    <string name="week_view" translatable="false">"Week"</string>
    <string name="month_view" translatable="false">"Month"</string>
    <string name="event_create">"New event"</string>
    <string name="event_edit" translatable="false">"Edit event"</string>
    <string name="goto_today">"Today"</string>
    <string name="menu_preferences">"Settings"</string>
    <string name="search">Search</string>
    <string name="hide_controls">"Hide controls"</string>
    <string name="show_controls">"Show controls"</string>
    <string name="accounts">Accounts &amp; sync</string>
    <string name="select_synced_calendars_title">Calendars to sync</string>
    <string name="select_synced_calendars_button">Calendars to sync</string>
    <string name="hint_what">"Event name"</string>
    <string name="hint_where">"Location"</string>
    <string name="hint_description">"Description"</string>
    <string name="hint_attendees">"Guests"</string>
    <string name="creating_event_with_guest">"Invitations will be sent. "</string>
    <string name="saving_event_with_guest">"Updates will be sent. "</string>
    <string name="create_event_dialog_save">Save</string>
    <string name="alert_title">Calendar notifications</string>
    <string name="event_info_title_invite">Meeting invitation</string>
    <string name="edit_event_to_label">To</string>
    <string name="edit_event_from_label">From</string>
    <string name="edit_event_all_day_label">All day</string>
    <string name="edit_event_calendar_label">Calendar</string>
    <string name="edit_event_show_all">Show all</string>
    <string name="description_label">Description</string>
    <string name="presence_label">Show me as</string>
    <string name="privacy_label">Privacy</string>
    <string name="no_syncable_calendars">No calendars</string>
    <string name="view_event_calendar_label">Calendar: \u0020</string>
    <string name="view_event_organizer_label">Organizer: \u0020</string>
    <string name="calendar_square_color_picker_description">Color selector</string>
    <string name="view_event_response_label">Attending? \u0020</string>
    <string name="response_yes">Yes</string>
    <string name="response_maybe">Maybe</string>
    <string name="response_no">No</string>
    <string name="email_guests_label">Email guests</string>
    <string name="email_subject_prefix" translatable="false">Re: \u0020</string>
    <string name="map_label">Map</string>
    <string name="call_label">Call</string>
    <string name="quick_response_settings" translatable="false">Quick responses</string>
    <string name="quick_response_settings_title">Edit quick responses</string>
    <string name="quick_response_email_failed">Failed to find an email app</string>
    <string-array name="quick_response_defaults">
        <item>Running just a couple of minutes late. </item>
        <item>Be there in about 10 minutes. </item>
        <item>Go ahead and start without me. </item>
        <item>Sorry, I can\'t make it. We\'ll have to reschedule. </item>
    </string-array>
    <string name="search_title">Search my calendars</string>
    <string name="edit_event_label">"Details"</string>
    <string name="edit_label">"Edit"</string>
    <string name="delete_label">"Delete"</string>
    <string name="save_label">Save</string>
    <string name="discard_label">Cancel</string>
    <string name="snooze_all_label">"Snooze all"</string>
    <string name="dismiss_all_label">"Dismiss all"</string>
    <string name="snooze_label">"Snooze"</string>
    <string name="dismiss_label">"Don’t remind"</string>
    <string name="daily">Daily</string>
    <string name="modify_all_following">Change this and all future events</string>
    <string name="new_event_dialog_label">"New event"</string>
    <string name="new_event_dialog_option">"New event"</string>
    <string name="delete_this_event_title">Delete this event? </string>
    <string name="delete_recurring_event_title">Delete <xliff:g id="eventtitle">%s</xliff:g>? </string>
    <string name="menu_general_preferences">General settings</string>
    <string name="menu_about_preferences">About Calendar</string>
    <string name="preferences_title">"Settings"</string>
    <string name="preferences_general_title">Calendar view settings</string>
    <string name="preferences_reminder_title">Notifications \u0026 reminders</string>
    <string name="preferences_week_start_day_default" translatable="false">-1</string>
    <string name="preferences_alerts_title">Notifications</string>
    <string name="preferences_alerts_vibrateWhen_title">Vibrate</string>
    <string name="prefDefault_alerts_vibrate_true" translatable="false">always</string>
    <string name="preferences_alerts_ringtone_title">Notification ringtone</string>
    <string name="preferences_alerts_popup_title">Pop-up notification</string>
    <string name="preferences_default_reminder_default" translatable="false">10</string>
    <string name="preferences_home_tz_title">Home time zone</string>
    <string name="preferences_home_tz_default" translatable="false">America/Los_Angeles</string>
    <string name="preferences_build_version">Build version</string>
    <string name="feedback" translatable="false">Feedback</string>
    <string name="gadget_title">Schedule</string>
    <plurals name="month_more_events">

        
        <item quantity="one">"+1"</item>
        
        <item quantity="other">+<xliff:g id="number">%d</xliff:g></item>
    </plurals>
    <string name="gadget_no_events">No upcoming calendar events</string>
    <string name="tardis" translatable="false">TARDIS</string>
    <string name="preferences_experimental_category" translatable="false">Experimental</string>
    <string name="preferences_reminders_category">Reminders</string>
    <string name="preferences_reminders_quiet_hours_label">Quiet hours</string>
    <string name="preferences_debug_category" translatable="false">Debugging</string>
    <string name="copy_db" translatable="false">Send database</string>
    <string name="directory_searching_fmt">Searching <xliff:g id="domain">%s</xliff:g>\u2026</string>
    <string name="accessibility_pick_start_date">Start date</string>
    <string name="accessibility_pick_start_time">Start</string>
    <string name="accessibility_pick_end_date">End date</string>
    <string name="accessibility_pick_end_time">End</string>
    <string name="accessibility_pick_time_zone">Time zone</string>
    <string name="accessibility_sync_cal">Sync calendar</string>
    <string name="accessibility_all_day">All day event</string>
    <string name="accessibility_repeats" translatable="false">Repetition</string>
    <string name="accessibility_reminder_time">Reminder time</string>
    <string name="accessibility_reminder_type">Reminder type</string>
    <string name="accessibility_reminder_showmeas">Show me as</string>
    <string name="accessibility_reminder_privacy">Privacy</string>
    <string name="accessibility_email_notification">Email guests</string>
    <string name="smart_reminder_title" translatable="false">Smart reminder</string>
    <string name="prefDefault_alerts_vibrateWhen" translatable="false">never</string>
    <string name="prefDialogTitle_vibrateWhen">Vibrate</string>
    <string name="preferences_week_start_day_title">"Start of the week "</string>
    <string name="preferences_week_start_day_dialog">"Start of the week"</string>
    <string name="preferences_default_reminder_title">"Default reminder time"</string>
    <string name="preferences_default_reminder_dialog">"Default time to remind me"</string>
    <string name="preferences_use_home_tz_title">"Use the time zone of your home"</string>
    <string name="preferences_use_home_tz_descrip">"When enabled, calendars and event time will be displayed in accordance with the time zone of your home, even if you are traveling. "</string>
    <string name="preferences_show_week_num_title" translatable="false">"Show the number of weeks"</string>
    <string name="smart_reminder_summary" translatable="false">"When enabled, time information in a short message will be automatically recognized and saved as an agenda reminder. "</string>
    <string name="jump_to_the_date">Jump to date</string>
    <string name="festival_solar_terms">Holiday seasons</string>
    <string name="calendar_settings">Settings</string>
    <string name="create">Add</string>
    <string name="schedule">Event</string>
    <string name="today_xml">Today</string>
    <string name="birthday">Birthday</string>
    <string name="expand_more">More</string>
    <string name="remarks">Remarks</string>
    <string name="location">Location</string>
    <string name="calendar_account">Account</string>
    <string name="local_calendar">Local</string>
    <string name="meeting">Meeting</string>
    <string name="preferences_function_setting">"General settings"</string>
    <string name="preferences_import_sms">"Import SMS event"</string>
    <string name="preferences_credit_card_payment">"Credit card repayment"</string>
    <string name="preferences_air_train_ticket">"Air tickets"</string>
    <string name="preferences_hotel_reservation">"Hotel reservation"</string>
    <string name="preferences_import_sms_info">"Better manage time - related SMS events"</string>
    <string name="preferences_sync_contact">"Contact information is synchronized "</string>
    <string name="preferences_sync_contact_info">"Synchronize contact time information associated with calendar"</string>
    <string name="preferences_almanac_taboo">"Almanac Taboo"</string>
    <string name="preferences_gas_show">"Gas Show"</string>
    <string name="preferences_calendar_tools">"Calendar Tools"</string>
    <string name="preferences_add_account">"Add account"</string>
    <string name="preferences_reminder_settings">"Reminders"</string>
    <string name="later">Later</string>
    <string name="later_5min">5 minutes later</string>
    <string name="later_10min">10 minutes later</string>
    <string name="later_30min">30 minutes later</string>
    <string name="later_1hour">1 hour later</string>
    <string name="later_2hour">2 hours later</string>
    <string name="the_hour">时辰</string>
    <string name="caishen">财神</string>
    <string name="xishen">喜神</string>
    <string name="happy_time">吉时</string>
</resources>