<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:background="@drawable/notify_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pop_tv_01"
        style="@style/FirstLineText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:text="@string/jump_to_the_date" />

    <View style="@style/LineSplit" />

    <TextView
        android:id="@+id/pop_tv_02"
        style="@style/FirstLineText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:text="@string/festival_solar_terms" />

    <View style="@style/LineSplit" />

    <TextView
        android:id="@+id/pop_tv_03"
        style="@style/FirstLineText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:text="@string/calendar_settings" />

</LinearLayout>