<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:background="@color/white">

    <CheckedTextView
        android:id="@+id/event_create_title_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:checked="true"
        android:text="@string/meeting"
        android:textColor="@color/item_text_color"
        android:textSize="15sp" />

    <CheckedTextView
        android:id="@+id/event_create_title_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="42dp"
        android:layout_toStartOf="@id/event_create_title_meeting"
        android:text="@string/schedule"
        android:textColor="@color/item_text_color"
        android:textSize="15sp" />

    <CheckedTextView
        android:id="@+id/event_create_title_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="42dp"
        android:layout_toEndOf="@id/event_create_title_meeting"
        android:text="@string/birthday"
        android:textColor="@color/item_text_color"
        android:textSize="15sp" />
</RelativeLayout>
