<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <Button
        android:id="@+id/btn_schedule_load_more"
        style="@style/Widget.GOME.Light.Button"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/expand_more"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/schedule_more_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >

        <RelativeLayout
            android:id="@+id/calendar_account_layout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:visibility="gone" >

            <TextView
                style="@style/FirstLineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/calendar_account" />

            <ImageView
                android:id="@+id/icon_end3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_arrow_gray" />

            <TextView
                android:id="@+id/tv_account"
                style="@style/SecondLineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/icon_end3"
                android:text="@string/local_calendar" />
        </RelativeLayout>

        <View
            style="@style/LineSplit"
            android:visibility="gone" />

        <EditText
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:id="@+id/remark_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#00000000"
            android:hint="@string/remarks"
            android:minHeight="56dp"
            android:textColorHint="#4d000000"
            android:textSize="15sp" />

        <View style="@style/LineSplit" />

        <EditText
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:id="@+id/location_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#00000000"
            android:hint="@string/location"
            android:minHeight="56dp"
            android:textColorHint="#4d000000"
            android:textSize="15sp" />

        <View style="@style/LineSplit" />
    </LinearLayout>

</FrameLayout>